--- a/6.md
+++ b/6.md
@@ -48,18 +48,18 @@
 <div class="panel clearfix">
     <h2 class="no_toc">The bottom line</h2>
     <ul>
-        <li>Итак, когда Вы выявили проблему, как мы описывали в <a href="/career-guide/world-problems/" target="_blank">предыдущей статье</a>, следующим шагом станет определить, как же эффективнее вложить свои силы в её решение.</li>
-        <li> Рассмотрим как косвенные подходы, такие как исследования, пропаганда и заработок ради пожертвований, <i>так и</i> непосредственную работу с проблемой. Вы можете найти как путь, подразумевающий большее влияние на проблему, так и путь, просто более комфортный для Вас.</li>
+        <li>Итак, когда мы выявили проблему, как описывалось в <a href="/career-guide/world-problems/" target="_blank">предыдущей статье</a>, следующим шагом станет определить, как же эффективнее вложить свои силы в её решение.</li>
+        <li> Рассмотрим как косвенные подходы, такие как исследования, пропаганда и заработок ради пожертвований, <i>так и</i> непосредственную работу с проблемой. Ты можешь найти как путь, подразумевающий большее влияние на проблему, так и путь, просто более комфортный для Вас.</li>
         <li>Затем сфокусируйтесь на подходах, которые наиболее эффективны в Вашей области. Некоторые проблемы можно решить просто сменой поведения. Другие требуют исследований, третьи - финансирования, и так далее.</li>
-        <li>И наконец, так как люди, сильнее заинтересованные в определенной отрасли, достигают в ней более значимых результатов, выберете что-то, к чему Вы имеете склонность. Не занимайтесь ради влияния на проблему задачами, которые Вас не увлекают.</li>
-        <li>В идеале, ищите наилучшее сочетание того, (i) насколько актуальна проблема, (ii) насколько значимым окажется Ваш вклад и (iii) насколько Вам эта дейтельность подходит.</li>
+        <li>И наконец, так как люди, сильнее заинтересованные в определенной отрасли, достигают в ней более значимых результатов, выбери что-то, к чему ты имеешь склонность. Не занимайся ради влияния на проблему задачами, которые тебя не увлекают.</li>
+        <li>В идеале, ищи наилучшее сочетание того, (i) насколько актуальна проблема, (ii) насколько значимым окажется твой вклад и (iii) насколько тебе эта деятельность подходит.</li>
     </ul>
 </div>
 ```
 
 ## Путь 1: Получать, чтобы отдавать
 
-Принес бы Билл Гейтс больше пользы, если бы работал на маленькую некоммерческую фирму? Мы редко думаем о разработке программного обеспечения как о пути принесения пользы миру, но Гейтс спас миллионы детских жизней, спонсируя разработку вакцин. Даже если Вы не в восторге от Microsoft, Вы согласитесь, что это неоценимое благо.
+Принес бы Билл Гейтс больше пользы, если бы работал на маленькую некоммерческую фирму? Мы редко думаем о разработке программного обеспечения как о пути принесения пользы миру, но Гейтс спас миллионы детских жизней, спонсируя разработку вакцин. Даже если ты не в восторге от Microsoft, согласись, что это просто неоценимое благо.
 
 ![Билл Гейтс внес огромный вклад своей благотворительностью, и это, на наш взгляд, с избытком компенсирует "синий экран смерти".](//80000hours.org/wp-content/uploads/2015/07/bill-gates-fireflies.jpg)[`Билл Гейтс внес огромный вклад своей благотворительностью, спася детей в количестве большем, чем население Шотландии, и это, на наш взгляд, с избытком компенсирует "синий экран смерти".`]
 
@@ -67,11 +67,12 @@
 
 Путь "получать, чтобы отдавать" - не только для людей, желающих работать в высокооплачиваемых сферах. Любой, кто хочет больше зарабатывать ради того, чтобы больше отдавать, уже на этом пути.
 
-Возьмем для примера историю Джулии и Джефа, бостонской пары с двумя детьми. Джулия перешла с должности администратора в некоммерческой организации на социальную работу в тюрьме. Джефф ранее работал as research technician. He decided to train up to become a software engineer, and eventually got a job at Google. The couple were able to earn more than twice as much, so started to donate about half their income to charity each year.
+Возьмем для примера историю Джулии и Джеффа, бостонской пары с двумя детьми. Джулия перешла с должности администратора в некоммерческой организации на социальную работу в тюрьме. Джефф ранее работал лаборантом-исследователем. Он решил повысить свою квалификацию до разработчика, и в итоге получил работу в Google.  Доходы Джеффа и Джулии возросли более чем в два раза, и они
+начали ежегодно отдавать на благотворительность около половины своего заработка.
 
-![Jeff and Julia have tried to find the best way to make a difference](https://cdn.80000hours.org/wp-content/uploads/2014/10/Jeff-and-Julia-make-a-difference.png)[`<a href="http://qz.com/515655/this-couple-lives-on-6-of-their-income-so-they-can-give-100000-a-year-to-charity/" target="_blank">Quartz:</a> Jeff and Julia have tried to find the best way to make a difference`]
+![Джефф и Джулия старались найти наилучший способ сделать что-то действительно значимое для мира](https://cdn.80000hours.org/wp-content/uploads/2014/10/Jeff-and-Julia-make-a-difference.png)[`<a href="http://qz.com/515655/this-couple-lives-on-6-of-their-income-so-they-can-give-100000-a-year-to-charity/" target="_blank">Quartz:</a> Джефф и Джулия старались найти наилучший способ сделать что-то действительно значимое для мира`]
 
-By doing this, they probably have had more impact than they could by working directly in a non-profit. Compare Jeff’s impact to that of the CEO of a non-profit:
+Идя своим путем, они, возможно, смогли принести намного больше пользы миру, чем работая непосредственно в некоммерческом секторе. Давайте сравним общественный вклад Джеффа с вкладом руководителя некоммерческой организации (НКО):
 
 ```
 <div id="tablepress-24-scroll-wrapper" class="tablepress-scroll-wrapper">
@@ -79,46 +80,48 @@ By doing this, they probably have had more impact than they could by working dir
         <thead>
             <tr class="row-1">
                 <th class="column-1">&nbsp;</th>
-                <th class="column-2">Google software engineer</th>
-                <th class="column-3">Non-profit CEO</th>
+                <th class="column-2">Программист в Google</th>
+                <th class="column-3">Руководитель НКО</th>
             </tr>
         </thead>
         <tbody>
             <tr class="row-2">
-                <td class="column-1">Salary</td>
+                <td class="column-1">Зарплата</td>
                 <td class="column-2">$250,000</td>
                 <td class="column-3">$65,000</td>
             </tr>
             <tr class="row-3">
-                <td class="column-1">Donations</td>
+                <td class="column-1">Пожертвования</td>
                 <td class="column-2">$125,000</td>
                 <td class="column-3">$0</td>
             </tr>
             <tr class="row-4">
-                <td class="column-1">Money to live on</td>
+                <td class="column-1">Средства к существованию</td>
                 <td class="column-2">$125,000</td>
                 <td class="column-3">$65,000</td>
             </tr>
             <tr class="row-5">
-                <td class="column-1">Direct impact<br /> of work</td>
-                <td class="column-2">Positive</td>
-                <td class="column-3">Very positive</td>
+                <td class="column-1">Степень влияния на проблемную область</td>
+                <td class="column-2">Большая</td>
+                <td class="column-3">Очень большая</td>
             </tr>
         </tbody>
     </table>
 </div>
 ```
 
-Jeff can live on about two times as much as he would have earned in the non-profit sector, and still donate enough to fund the salaries of about two non-profit CEOs.[^:`<p>The 2012 Watkins Uiberall Report found that (<a href="http://www.cnm.org/Documents/2012-Watkins-Uiberall-NFP-Survey.pdf">LINK</a>): <em>The median salary for executive directors/CEOs is between $50,000 and $75,000. CEO salaries correlate with organizational budget size. For small organizations, the median salary is between $30,000 and $50,000. Among medium-sized organizations, 36% of CEOs have salaries between $50,000 and $75,000, while 50.5% earn more than $75,000 and 13.5% earn less than $50,000. Among large organizations, 14.2% pay salaries of $100,000 or less; 38.1% pay between $101,000 and $150,000; and 47.7% pay more than $150,000.</em> Note that this is significantly lower than the median figures reported by the prominent <a href="http://www.charitynavigator.org/index.cfm?bay=studies.ceo#.U-vdpPldXkA">Charity Navigator Annual Survey</a>. This is because Charity Navigator focuses on “mid to large” US charities, which pay substantially higher salaries.`] On top of this, he may also have some positive direct impact too, since Google has developed valuable innovations like Google Maps and Gmail; *and* he thinks he&#8217;s happier in his work because he enjoys engineering.
+Средства Джеффа к существованию увеличиваются в два раза по сравнению с тем, что он имел, работая в некоммерческом секторе, и при этом его пожертвований может быть достаточно, чтобы выплачивать зарплату двум руководителям НКО.
+[^:`<p>Отчет Watkins Uiberall за 2012 год обнаружил, что (<a href="http://www.cnm.org/Documents/2012-Watkins-Uiberall-NFP-Survey.pdf">LINK</a>): <em>Средняя зарплата исполнительных директоров ранжируется от $50,000 and $75,000. Она согласуется с общим бюджетом организации. Для маленьких организаций, она составляет порядка $30,000-$50,000. В средних по размеру организациях, 36% директоров имеют зарплаты от $50,000 до $75,000, в то время как 50.5% из них зарабатывают более, чем $75,000, а 13.5% - менее, чем $50,000. Среди крупных организаций, 14.2% директоров получают максимум $100,000; 38.1% - от $101,000 до $150,000; и 47.7% руководителей   имеют более, чем $150,000.</em> Обратите внимание, что эти цифры существенно ниже, чем средние, упоминаемые известным рейтинговым агенством <a href="http://www.charitynavigator.org/index.cfm?bay=studies.ceo#.U-vdpPldXkA">Charity Navigator Annual Survey</a>. Причина в том, что Charity Navigator фокусируется на средних и крупных американских благотворительных организациях, которые имеют возможность предоставлять хорошие зарплаты.`]  Вдобавок, от его работы есть и прямая польза, ведь на счету Google уже есть такие важные инновационные разработки, как карты Google и почтовая служба Gmail; *а еще* на этой работе он чувствует себя счастливее, потому что ему действительно нравится заниматься разработкой.
 
-Moreover, Jeff and Julia can switch their donations to whichever organisations are most in need of funds at any given time based on their research, whereas it’s harder to change where you work. This flexibility is particularly valuable because we <a href="/career-guide/career-capital/#mistake-2-not-building-flexible-career-capital-that-will-be-useful-in-the-future">don’t know</a> which problems will be most pressing in the future.
+Более того, Джефф и Джулия имеют возможность в любой момент перенаправить свои пожертвования в другие организации, которым требуется помощь, если они обнаружат таковые, в то время как резко сменить работу было бы намного труднее. Эта гибкость очень ценна, потому что мы мы можем просто <a href="/career-guide/career-capital/#mistake-2-not-building-flexible-career-capital-that-will-be-useful-in-the-future">не иметь понятия</a>, какие проблемы настигнут наш мир в будущем.
 
-This opportunity exists because (as we saw <a href="/career-guide/how-much-difference-can-one-person-make/">earlier</a>) we happen to live in a world with huge income inequality – it&#8217;s possible to earn several times as much as a teacher or non-profit worker, and vastly more than the world&#8217;s poorest people. At the same time, hardly anyone donates more than a few percent of their income,[^:`<blockquote><p>
- “...those with income between $100,000 and $200,000 contribute, on average, 2.6 percent of their income, which is lower compared to those with income either below $100,000 (3.6 percent) or above $200,000 (3.1 percent)”
+Такая возможность существует, потому что (как мы рассматривали <a href="/career-guide/how-much-difference-can-one-person-make/">ранее</a>) нам выдалось жить в мире с колоссальным неравенством обеспеченности: мы можем зарабатывать в разы больше, чем учитель
+или сотрудник некоммерческого предприятия, и на порядок больше, чем самые бедные люди мира. И в то же время, практически никто не жертвует на благотворительность даже малой доли своего заработка, [^:`<blockquote><p>
+ “...те, кто зарабатывает от $100,000 до $200,000 жертвуют, в среднем, 2.6% своего дохода, и это ниже, чем пожертвования, приходящие от людей, получающих менее $100,000 (3.6 процентов) или более $200,000 (3.1 процента)”
 </p></blockquote>
-<p><a href="http://web.archive.org/web/20160612154951/http://nccs.urban.org/nccs/statistics/charitable-giving-in-america-some-facts-and-figures.cfm">Charitable Giving in America: Some Facts and Figures</a>. Rates of charitable giving in the US are among the highest in the world.`] so *if you are* willing to do so, you can have an amazing impact in a very wide range of jobs.
+<p><a href="http://web.archive.org/web/20160612154951/http://nccs.urban.org/nccs/statistics/charitable-giving-in-america-some-facts-and-figures.cfm">Charitable Giving in America: Some Facts and Figures</a>. Rates of charitable giving in the US are among the highest in the world.`], так что, *если* ты хочешь помогать миру таким путём, у тебя на выбор есть огромное множество профессий, позволяющих внести большой вклад.
 
-Earlier, we also saw that any college graduate in a developed country can have a major impact by giving 10% to an effective charity. The average graduate earns $77,000 per year over their life, and 10% of that could save about 40 lives if given to the Against Malaria Foundation for example.
+Ранее мы говорили, что любой выпускник колледжа в развитой стране может внести значительный вклад в изменение мира, отдавая 10% своего дохода на благотворительность. Средний американский выпускник зарабатывает около $77,000 в год, и 10 процентов от этой суммы могли бы спасти порядка 40 жизней, если бы были перечислены, к примеру, фонду борьбы с малярией.
 
 If you could just earn 10% more, and donate the extra, then that’s twice as much impact again. And if you think there are better organisations to fund than Against Malaria Foundation – perhaps working on different problems, or research or advocacy – the impact is even higher.
 
