--- a/1.md
+++ b/1.md
@@ -449,8 +449,7 @@ Retrieved 12 Feb 2016</p>
 
  <div class="panel clearfix">
                     <h2><span id="apply-this-to-your-own-career" class="toc-anchor"></span>Примените это к своей карьере</h2>
-                    <p>Наши шесть составляющих, особенно помощь другим и совершенствование профессиональных навыков,
-могут послужить путеводной звездой для ваших поисков: это то, к чему следует стремиться в поисках идеальной работы в долгосрочной перспективе.</p>
+                    <p>Наши шесть составляющих, особенно помощь другим и совершенствование профессиональных навыков, могут послужить путеводной звездой для ваших поисков: это то, к чему следует стремиться в поисках идеальной работы в долгосрочной перспективе.</p>
                     <p>Вот несколько упражнений, чтобы помочь вам в их применении.</p>
                     <ol>
                         <li>Используйте шесть составляющих идеальной работы, чтобы провести сравнительный анализ. Выберите два потенциальных места работы, оцените их по шкале от 1 до 5 баллов <a href="https://docs.google.com/document/d/12e1ei-CUNHBPr6U_k89ylHQPQ8wwh9usPO6GRVnPQyA/edit#heading=h.6l31h1ur692w" target="_blank">по каждому из критериев</a>.</li>
