--- a/6.md
+++ b/6.md
@@ -110,7 +110,7 @@
 </div>
 ```
 
-Средства Джеффа к существованию увеличиваются в два раза по сравнению с тем, что он имел, работая в некоммерческом секторе, и при этом его пожертвований может быть достаточно, чтобы выплачивать зарплату двум руководителям НКО.
+Средства Джеффа к существованию увеличились в два раза по сравнению с тем, что он имел, работая в некоммерческом секторе, и при этом его пожертвований может быть достаточно, чтобы выплачивать зарплату двум руководителям НКО.
 [^:`<p>Отчет Watkins Uiberall за 2012 год обнаружил, что (<a href="http://www.cnm.org/Documents/2012-Watkins-Uiberall-NFP-Survey.pdf">LINK</a>): <em>Средняя зарплата исполнительных директоров ранжируется от $50,000 and $75,000. Она согласуется с общим бюджетом организации. Для маленьких организаций, она составляет порядка $30,000-$50,000. В средних по размеру организациях, 36% директоров имеют зарплаты от $50,000 до $75,000, в то время как 50.5% из них зарабатывают более, чем $75,000, а 13.5% - менее, чем $50,000. Среди крупных организаций, 14.2% директоров получают максимум $100,000; 38.1% - от $101,000 до $150,000; и 47.7% руководителей   имеют более, чем $150,000.</em> Обратите внимание, что эти цифры существенно ниже, чем средние, упоминаемые известным рейтинговым агенством <a href="http://www.charitynavigator.org/index.cfm?bay=studies.ceo#.U-vdpPldXkA">Charity Navigator Annual Survey</a>. Причина в том, что Charity Navigator фокусируется на средних и крупных американских благотворительных организациях, которые имеют возможность предоставлять хорошие зарплаты.`]  Вдобавок, от его работы есть и прямая польза, ведь на счету Google уже есть такие важные инновационные разработки, как карты Google и почтовая служба Gmail; *а еще* на этой работе он чувствует себя счастливее, потому что ему действительно нравится заниматься разработкой.
 
 Более того, Джефф и Джулия имеют возможность в любой момент перенаправить свои пожертвования в другие организации, которым требуется помощь, если они обнаружат таковые, в то время как резко сменить работу было бы намного труднее. Эта гибкость очень ценна, потому что мы мы можем просто <a href="/career-guide/career-capital/#mistake-2-not-building-flexible-career-capital-that-will-be-useful-in-the-future">не иметь понятия</a>, какие проблемы настигнут наш мир в будущем.
@@ -123,56 +123,53 @@
 
 Ранее мы говорили, что любой выпускник колледжа в развитой стране может внести значительный вклад в изменение мира, отдавая 10% своего дохода на благотворительность. Средний американский выпускник зарабатывает около $77,000 в год, и 10 процентов от этой суммы могли бы спасти порядка 40 жизней, если бы были перечислены, к примеру, фонду борьбы с малярией.
 
-If you could just earn 10% more, and donate the extra, then that’s twice as much impact again. And if you think there are better organisations to fund than Against Malaria Foundation – perhaps working on different problems, or research or advocacy – the impact is even higher.
+Если ты сможешь заработать хотя бы на 10% больше, чем сейчас, а потом пожертвовать эти деньги, это будет уже двойным профитом. А если ты обнаружишь организации, более значимые, чем фонд борьбы с малярией, например, занимающиеся какой-то другой проблемой, исследованием или поддержкой, степень твое влияния на мировые проблемы станет еще выше.
 
-Since we introduced the concept of “earning to give” in 2011, hundreds of people have taken it up and stuck with it. Most give around 30% of their income, and some more than 50%. Collectively, they’ll donate tens of millions of dollars to high impact charities in the coming years. In doing so, they are funding passionate people who want to contribute directly, but who otherwise wouldn’t have the resources.
+С тех пор, как мы предложили концепцию «получай, чтобы отдавать» в 2011 году, сотни людей стали ее сторонниками и продолжают ее придерживаться. Большинство из них жертвует около 30% своего дохода, другие — больше 50%. В общей сложности, за ближайшие годы они смогут пожертвовать десятки миллионов долларов в высокоэффективные благотворительные фонды. Таким образом, они профинансируют энтузиастов, желающих непосредственно заниматься мировыми проблемами, но не имеющих на это ресурсов.
 
-One of the people we advised in 2011, Matt, has donated over $1m while still in his 20s, and was featured in the <a href="http://www.nytimes.com/2015/04/05/opinion/sunday/nicholas-kristof-the-trader-who-donates-half-his-pay.html">New York Times</a>. He finds his job more enjoyable too.
-
-Another quit his job as a software engineer and founded a startup. He has pledged all of his income above minimum wage to charity. If his startup’s current valuation is accurate, then he’ll give <a href="/2015/12/interview-with-ben-who-expects-to-donate-eight-figures-for-charity-through-tech-entrepreneurship/">millions of dollars to charity in the next decade</a>. His startup also reduces paperwork for doctors, and so it has direct impact too.
-
+Один из людей, которых мы консультировали в 2011 году, Мэтт, успел пожертвовать более миллиона долларов, когда ему не исполнилось ещё и тридцати, и он засветился в <a href="http://www.nytimes.com/2015/04/05/opinion/sunday/nicholas-kristof-the-trader-who-donates-half-his-pay.html">New York Times</a>. Кстати, он отметил, что и удовольствия от работы он теперь испытывает намного больше.
+Другой наш клиент бросил работу программистом и запустил собственный стартап.  Он взял на себя обязательство отдавать весь свой доход (сверх минимальной заработной платы) на благотворительность. Если текущие оценки его стартапа верны, в следующие десять лет он сможет направить на благотворительность <a href="/2015/12/interview-with-ben-who-expects-to-donate-eight-figures-for-charity-through-tech-entrepreneurship/">миллионы долларов</a>. Его проект уменьшает количество работы с бумажками для врачей, так что он ещё окажет и непосредственную помощь людям. 
 ```
 <div id="case-study-quote-35578" class="panel clearfix">
     <div class="col-xs-9 col-sm-8 col-md-9">
         <blockquote class="no-indent no-margin-bottom">
-            <div class="case-study-quote__text">&ldquo;Without 80,000 Hours' research, I wouldn't have started this company; and without their community, I wouldn't have made it this far.&rdquo;</div>
-            <p class="case-study-quote__read-more margin-top-small"><a href="https://80000hours.org/career-guide/member-stories/ben-west/" class="btn btn-tertiary">Read Ben's story</a></p>
+            <div class="case-study-quote__text">&ldquo;Если бы не "80,000 Hours", я бы никогда не основал эту компанию, а без поддержки их сообщества, я бы не смог так далеко продвинуться.&rdquo;</div>
+            <p class="case-study-quote__read-more margin-top-small"><a href="https://80000hours.org/career-guide/member-stories/ben-west/" class="btn btn-tertiary">Читать историю Бена</a></p>
         </blockquote>
     </div>
     <div class="col-xs-3 col-sm-4 col-md-3 image-frame">
-        <div class="image-mask-circle image-mask-circle-border"> <img src="https://cdn.80000hours.org/wp-content/uploads/2016/05/Screen-Shot-2016-05-23-at-13.40.44-150x150.png" alt="Ben portrait photo"></div>
+        <div class="image-mask-circle image-mask-circle-border"> <img src="https://cdn.80000hours.org/wp-content/uploads/2016/05/Screen-Shot-2016-05-23-at-13.40.44-150x150.png" alt="Бен"></div>
     </div>
 </div>
 ```
 
-### Should you earn to give?
+### Должны ли мы стремиться зарабатывать, чтобы отдавать?
 
-Earning to give has been our most memorable and controversial idea, attracting media coverage in the <a href="http://web.archive.org/web/20170315131440/http://www.bbc.co.uk/news/education-15820786">BBC</a>, <a href="https://www.washingtonpost.com/news/wonk/wp/2013/05/31/join-wall-street-save-the-world/">Washington Post</a>, <a href="http://web.archive.org/web/20170315131826/http://www.dailymail.co.uk/news/article-2334682/Young-professionals-joining-Wall-Street-save-world.html">Daily Mail</a> and many other outlets.
+Призыв зарабатывать больше, чтобы делать больше пожертвований, стал нашей самой незабываемой и противоречивой идеей, она привлекла внимание <a href="http://web.archive.org/web/20170315131440/http://www.bbc.co.uk/news/education-15820786">BBC</a>, <a href="https://www.washingtonpost.com/news/wonk/wp/2013/05/31/join-wall-street-save-the-world/">Washington Post</a>, <a href="http://web.archive.org/web/20170315131826/http://www.dailymail.co.uk/news/article-2334682/Young-professionals-joining-Wall-Street-save-world.html">Daily Mail</a> и множества других средств массовой информации.
 
-For this reason, many people think it’s our top recommendation. But it’s not: it depends on your situation.
+Из-за этого многие люди думают, что это наша основная рекомендация. Однако, это вовсе не так: всё зависит от твоей личной ситуации.
 
-We think earning to give is an option worth considering when:
+Нам кажется, что стремление больше зарабатывать, чтобы делать более крупные пожертвования, оправдано в следующих случаях:
 
-. <strong>You’re a good fit for a higher earning option.</strong> Don’t become a consultant if you’d hate it – you’ll be more likely to burn out and put your career in a worse long-term position, and you won’t earn that much anyway. Even if you only care about your impact, it’s <a href="/career-guide/personal-fit/">important to be good at your job</a>.
-. <strong>You want to gain skills in a higher earning option</strong> (for use in more direct work later on), and earning to give could help you to stay engaged with social impact while you do so. (In the next article we explain why it’s important to gain <a href="/career-guide/career-capital/">“career capital”</a>.)
-. <strong>You’re very uncertain about <a href="/career-guide/most-pressing-problems/">which problems are most pressing</a>.</strong> Earning to give provides the most flexibility because you can easily change where you donate, or even save the money and give later.
-. <strong>You want to contribute to an area that is more funding-constrained</strong> rather than <a href="https://80000hours.org/2015/11/why-you-should-focus-more-on-talent-gaps-not-funding-gaps/">talent constrained</a>.
+. <strong>Ты можешь хорошо зарабатывать.</strong> Не иди в консалтинг, если ненавидишь его: так ты попросту выгоришь на работе, потеряешь какие-либо перспективы в карьере, и, если посмотреть в целом, просто не сможешь достаточно много заработать в этой сфере. Даже если ты заботишься исключительно о вкладе в решение мировых проблем, важно работать в той сфере, <a href="/career-guide/personal-fit/">которая тебе близка</a>.
+. <strong>Ты хочешь набраться опыта в высокооплачиваемой сфере</strong> (чтобы потом применить его там, где сможешь непосредственно помогать людям), а пожертвования помогут тебе оставаться полезным миру в этот период (в следующей главе мы объясним, почему важно накапливать <a href="/career-guide/career-capital/">«карьерный капитал»</a>).
+. <strong>Тебе трудно определить, <a href="/career-guide/most-pressing-problems/">какие проблемы наиболее актуальны</a> which problems are most pressing</a>.</strong> Пожертвования – наиболее гибкий способ помогать миру, потому что ты в любой момент можешь выбрать другую благотворительную организацию или придержать деньги, пожертвовав их позже.
+. <strong>Ты хочешь помогать той отрасли, которая сильнее нуждается в деньгах</strong>, чем <a href="https://80000hours.org/2015/11/why-you-should-focus-more-on-talent-gaps-not-funding-gaps/">в непосредственном приложении сил и талантов</a>.
 
-In fact, if you&#8217;re especially focused on <a href="/article/cause-selection/">the global problems we think are most pressing</a>, especially within the effective altruism community, then <a href="https://80000hours.org/2015/07/80000-hours-thinks-that-only-a-small-proportion-of-people-should-earn-to-give-long-term/">we don&#8217;t think earning to give should be your first choice</a>. This is because these areas <a href="https://80000hours.org/2017/03/what-skills-are-effective-altruist-organisations-missing/">seem more talent constrained than funding constrained</a>. Instead, we recommend trying to first contribute directly, in effective non-profits, government or research.
+Но в целом, если ты хочешь помогать в <a href="/article/cause-selection/">наиболее актуальных мировых проблемах</a>, особенно, совместно с сообществом эффективного альтруизма, <a href="https://80000hours.org/2015/07/80000-hours-thinks-that-only-a-small-proportion-of-people-should-earn-to-give-long-term/">мы не советуем сосредотачиваться на пути "получай, чтобы отдавать"</a>. Потому что выбранные нами области <a href="https://80000hours.org/2017/03/what-skills-are-effective-altruist-organisations-missing/">нуждаются, скорее, в талантах, чем в деньгах</a>. Вместо финансовой помощи, мы бы советовали попробовать вносить непосредственный вклад, работая с эффективными некоммерческими организациями, исследованиями или правительством.
 
-### Common objections to earning to give
+### Типичные возражения против идеи зарабатывать, чтобы отдавать
 
-<strong>Can people actually stick with it?</strong> Won’t they end up being influenced by their peers to spend the money on luxuries rather than donating? We were worried this would happen when we first introduced the idea, but it hasn’t. Hundreds of people are pursuing earning to give and while some have left because they thought they could do more good elsewhere, no-one we know has simply given up their plans to donate. In part, this is because many people pursuing earning to give made public pledges of their intentions to donate, often through <a href="https://www.givingwhatwecan.org/pledge/" target="_blank">Giving What We Can</a>. The existence of a community that earns to give also makes it much easier to stick with today.
+<strong>Смогут ли люди на практике следовать этому подходу?</strong> Не откажутся ли они от пожертвований в пользу роскоши, поддавшись влиянию своего окружения? Нас беспокоил этот вопрос, когда мы впервые представили свою идею, но такого не произошло. Сотни людей продолжают отчислять крупные суммы на пожертвования, и тогда как некоторые бросили эту затею, найдя иной способ приносить пользу, мы не знаем ни одного человека, кто просто так отказался бы от намерения делать пожертвования.  В частности, многие люди продолжают жертвовать, поскольку публично взяли на себя такое обязательство, например, через <a href="https://www.givingwhatwecan.org/pledge/" target="_blank">Giving What We Can</a>. Когда вы знаете, что есть уже столько людей, зарабатывающих ради пожертвований, стать приверженцем такой идеи становится намного проще.
 
-<strong>Don’t many high earning jobs cause harm?</strong> <a href="https://80000hours.org/articles/harmful-career/">We don’t recommend taking a job that does a lot of harm</a> in order to donate the money. In practice, most people who earn to give work in the fields of technology, asset management, medicine or consulting, and we think these positions do a small amount of good, or are neutral. For instance, many (but <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">not all</a>) financial traders make profits at the expense of other traders, so they’re moving money around, mostly from <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">rich people to other rich people</a>. Of course, there are <i>some</i> people who cause harm in these industries, but that’s true of any industry.
+<strong>Разве многие из высокооплачиваемый профессий не причиняют вреда миру?</strong> <a href="https://80000hours.org/articles/harmful-career/">Мы не рекомендуем браться за работу, от которой много вреда</a>, даже ради пожертвований. На практике, большинство людей, придерживающихся идеи «больше зарплата — больше пожертвований», работают в сфере технологий, управления активами, медицины,  консультирования, и на наш взгляд, эти профессии относительно полезны, либо нейтральны. К примеру, многие (но <a href="/2015/08/what-are-the-10-most-harmful-jobs/#7-borderline-fraudulent-lending-or-otherwise-making-a-financial-firm-highly-risky" target="_blank">не все</a>) трейдеры получают прибыль за счет других трейдеров, так что они просто обеспечивают круговорот денег <a href="/2015/07/is-wealth-inequality-so-extreme-that-its-ok-to-be-a-ruthless-trader/" target="_blank">от одних богатых людей к другим</a>. Конечно, существуют <i>определенные</i> люди, которые способны нанести вред и в этих сферах, но это замечание справедливо вообще для всех сфер. 
 
-More broadly, there are lots of ways to earn more money, and we doubt all of these are harmful. What about medicine, engineering or private tutoring? There is also the option to make the industry better from the inside. If you’re socially motivated and you replace someone who doesn’t care about the harm they do, that may well be better for the world.
+В целом, существует множество способов заработать, и мы сомневаемся, что все они должны приносить вред. Как насчет медицины, инженерии или частного обучения? Кроме того, всегда можно совершенствовать свою отрасль изнутри. Если вашему предшественнику было всё равно, сколько вреда приносит его работа, а вам это небезразлично, для общества так наверняка будет лучше.
 
-<strong>What if I wouldn’t be motivated doing a high earning job?</strong> In that case, don’t do one. We only recommend earning to give if it’s a good fit. Just bear in mind, as we covered <a href="/career-guide/job-satisfaction/" target="_blank">previously</a>, that you can become interested in more jobs than you might think.
+<strong>Что, если у меня не будет мотивации работать на высокооплачиваемой должности?</strong> Тогда не работай на ней. Мы рекомендуем стремиться зарабатывать больше, чтобы больше отдавать только в том случае, если тебе это подходит. Просто помни, что, как мы обсуждали <a href="/career-guide/job-satisfaction/" target="_blank">ранее</a>, тебя могут заинтересовать намного больше профессий, чем кажется на первый взгляд.
+<strong>Может быть, я смог бы приносить больше пользы, занимаясь чем-то другим?</strong> Велика вероятность, что так оно и есть. Об этом мы поговорим далее.
 
-<strong>Couldn’t I have more impact doing something else?</strong> There’s a good chance that you could, as we cover later in the article.
-
-(To go into the ethics of earning to give in more depth, see <a href="https://www.academia.edu/1557895/Replaceability_Career_Choice_and_Making_a_Difference" target="_blank">this paper</a> we published.)
+(Если хочешь углубиться в этику заработка ради пожертвований, советуем ознакомиться с <a href="https://www.academia.edu/1557895/Replaceability_Career_Choice_and_Making_a_Difference" target="_blank">этой нашей статьёй</a>.)
 
 ### What’s the best way to earn to give?
 
