--- a/6.md
+++ b/6.md
@@ -119,7 +119,7 @@
 или сотрудник некоммерческого предприятия, и на порядок больше, чем самые бедные люди мира. И в то же время, практически никто не жертвует на благотворительность даже малой доли своего заработка, [^:`<blockquote><p>
  “...те, кто зарабатывает от $100,000 до $200,000 жертвуют, в среднем, 2.6% своего дохода, и это ниже, чем пожертвования, приходящие от людей, получающих менее $100,000 (3.6 процентов) или более $200,000 (3.1 процента)”
 </p></blockquote>
-<p><a href="http://web.archive.org/web/20160612154951/http://nccs.urban.org/nccs/statistics/charitable-giving-in-america-some-facts-and-figures.cfm">Charitable Giving in America: Some Facts and Figures</a>. Rates of charitable giving in the US are among the highest in the world.`], так что, *если* ты хочешь помогать миру таким путём, у тебя на выбор есть огромное множество профессий, позволяющих внести большой вклад.
+<p><a href="http://web.archive.org/web/20160612154951/http://nccs.urban.org/nccs/statistics/charitable-giving-in-america-some-facts-and-figures.cfm">Благотворительность в Америке: некоторые факты и фигуры</a>. Америка находится среди мировых лидеров по количеству благотворительных пожертвований.`], так что, *если* ты хочешь помогать миру таким путём, у тебя на выбор есть огромное множество профессий, позволяющих внести большой вклад.
 
 Ранее мы говорили, что любой выпускник колледжа в развитой стране может внести значительный вклад в изменение мира, отдавая 10% своего дохода на благотворительность. Средний американский выпускник зарабатывает около $77,000 в год, и 10 процентов от этой суммы могли бы спасти порядка 40 жизней, если бы были перечислены, к примеру, фонду борьбы с малярией.
 
@@ -167,7 +167,8 @@
 В целом, существует множество способов заработать, и мы сомневаемся, что все они должны приносить вред. Как насчет медицины, инженерии или частного обучения? Кроме того, всегда можно совершенствовать свою отрасль изнутри. Если вашему предшественнику было всё равно, сколько вреда приносит его работа, а вам это небезразлично, для общества так наверняка будет лучше.
 
 <strong>Что, если у меня не будет мотивации работать на высокооплачиваемой должности?</strong> Тогда не работай на ней. Мы рекомендуем стремиться зарабатывать больше, чтобы больше отдавать только в том случае, если тебе это подходит. Просто помни, что, как мы обсуждали <a href="/career-guide/job-satisfaction/" target="_blank">ранее</a>, тебя могут заинтересовать намного больше профессий, чем кажется на первый взгляд.
-<strong>Может быть, я смог бы приносить больше пользы, занимаясь чем-то другим?</strong> Велика вероятность, что так оно и есть. Об этом мы поговорим далее.
+
+<strong>Может быть, я смог бы приносить больше пользы, занимаясь чем-то другим?</strong> Скорее всего, так оно и есть. Об этом мы поговорим далее.
 
 (Если хочешь углубиться в этику заработка ради пожертвований, советуем ознакомиться с <a href="https://www.academia.edu/1557895/Replaceability_Career_Choice_and_Making_a_Difference" target="_blank">этой нашей статьёй</a>.)
 
